# EvAM-Tools

./: .Rapp.history  .gitignore  DAG_Fork_3_data.rds  DESCRIPTION  Dockerfile  Dockerfile-evam-common  Dockerfile-evam-common-0  Dockerfile-evam-rstudio  Dockerfile-evam-rstudio-independent  Dockerfile-evam-shiny  Dockerfile-evam-shiny-independent  Dockerfile-tag-naming  EvamDockerfile  README.html  README.md  README.txt  README_pull_requests.txt  README_this_branch  Renviron.based_on_bioc  ShinyDockerfile  ShinyDockerfile-2  TO-DO.org  build-test.sh  gulomam-notas-reunion-2021-12-03.org  gulomam-notes-reunion-2021-11-10.org  index.html  putting-mccbn-in-suggests.org  run-HT-to-segfault.R
Additional_doc/: Additional_doc.tex  Additional_tech_doc.tex  README-figure-paths.txt  cpm_refs.bib  create_all_additional_doc.sh  evamtools-examples.bib  evamtools_examples.Rnw  evamtools_methods_details_faq.tex  intro_additional_docs.tex  runKnitr-2.sh
External-code/DBN/: dbn-external.R
External-code/HESBCN/: hesbcn-external.R
code_from_what_genotype_next/: MHN_tests.R  cbn-process.R  code-all-methods-2-trans-matrix-max-genes-15.R  code-all-methods-minimal.R  dbn-process.R  hesbcn-process.R  hesbcn.R  hypertraps-process.R  hypertraps_benchmark.R  hypetraps-process.R  mccbn-process.R  sample_genotypes_from_trm.R  schill-trans-mat.R  simulations.R  simulations_2.R  test_cpms.R  utils.R
code_from_what_genotype_next/tests-sample_genotypes_from_trm/: p_values6_test_lacerta.RData  p_values8_test.RData  p_values8_test_gallotia.RData  tests-sample_genotypes_from_trm.R
ct-cbn-0.1.04b-RDU/: CHANGELOG  Makefile  Makefile.am  Makefile.in  README  README-changes-RDU.txt  aclocal.m4  config.status  configure  configure.ac  ct-cbn  ct-cbn.h-original  h-cbn
ct-cbn-0.1.04b-RDU/examples/: BC.label  BC.pat  BC.poset  CRC.label  CRC.pat  CRC.poset  HIV.gps  RCC.label  RCC.pat  RCC.poset  hiv.pat  hiv.poset  hiv.prf  prostate.pat  prostate.prf
ct-cbn-0.1.04b-RDU/src/: ct-cbn.c  ct-cbn.h  h-cbn.c  queue.c  queue.h
ct-cbn-0.1.04b-RDU/src/.deps/: ct_cbn-ct-cbn.Po  ct_cbn-queue.Po  h_cbn-h-cbn.Po  h_cbn-queue.Po
data/: compute_cpm_from_toy_data_sets.R  gene_names.RData  out_cpms.rds  test_simulations.rds
data/toy_datasets_cpms/: XOR.rds  c2.rds  c2_2.rds  c3.rds  c7.rds  cv1.rds  rse.rds  se.rds
docker/: runFromImage.R
evamtools/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  Renviron.based_on_bioc
evamtools/R/: CPM-plotting.R  HESBCN__import.hesbcn.R  HyperHMM-plotting.R  HyperHMM-process.R  MCCBN__random_poset.R  MHN__ExampleApplications.R  (+48 more)
examples/: HyperTraPS_data.R  access_genots_from_oncosimul.R  benchmark.R  chi_square_simulations_distributions.R  compare_simulations.R  ex1.R  ex_pmce_or.txt  ex_pmce_out1.txt  ex_pmce_out2.txt  getting-paths-mccbn.R  hyperTraPS_AND_OR_XOR.R  launch_HyperTraPS.R  ot-simple.R  plot_benchmark.R  poset-simulation-does-allow-epistasis-between-independent-drivers.R  simple_test.R  simulating-posets.R  stomach_pmce_obtain_data.R  summary_HP.md  test_2.R  tests-access_genots_from_oncosimul.R  toy_datasets.R
examples_for_upload/: BRCA_ba_s.csv  README.txt  d1col.csv  ov2.csv  ov3.csv  ovx.csv  tinydata.csv
guloMAM/: DESCRIPTION  NAMESPACE
other_miscell/: capri-caprese-process.R  test.run_hesbcn_continuously.R
profiling/: Process  Simulations  Simulations2  profiling.simulations.R  profiling_2.simulations.R
shiny/: run_shiny_CPMs.R
tests/: DBN_tests.R  MHN_tests.R  test_cpms.R  testthat.R
(+733 files in other folders)
